# python-audit-log

./: .ruff  README.md  alembic.ini  config.py  pyproject.toml
alembic/: env.py
audit_log/: __init__.py  cli.py  log.py  models.py
db/migrate/: db206ecb39c4_create_audit_logs_table.py
