[tool.poetry]
name = "python-audit-log"
version = "0.1.0"
description = "Audit logging library for Python"
authors = ["lizhongyi <lizhongyi@xyz10.com>"]
readme = "README.md"

# Project URLs for better metadata in the package
[tool.poetry.urls]
repository = "https://github.com/iceye-ltd/python-audit-log"

[tool.poetry.dependencies]
python = ">=3.12"
SQLAlchemy = ">=1.4"
Alembic = ">=1.7"
pymysql = "^1.1.1"

[tool.poetry.group.dev.dependencies]
ruff = "*"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]
# Enables setuptools_scm, no additional configuration needed

[tool.ruff]
select = [
    "A",     # builtins
    "ASYNC", # Helps avoid blocking calls in async code
    "B",     # bugbear
    "C4",    # Comprehensions
    "DTZ",   # datetime checks, sanity check on top of our own
    "E",     # Errors
    "ERA",   # Eradicate (commented out code)
    "F",     # pyflakes
    "FLY",   # flynt (enforce f-strings)
    "G",     # logging format
    "I",     # isort
    "N",     # pep8-naming
    "PERF",  # Perflint
    "PGH",   # pygrep-hooks
    "PIE",   # misc lints
    "PT",    # pytest linting
    "PTH",   # Use pathlib
    "RET",   # Return
    "RUF",   # Ruff-specific rules
    "S",     # Bandit security
    "SIM",   # Simplify
    "TRY",   # exceptions handling
    "UP",    # pyupgrade
]

ignore = [
    "E501",   # Ignore line length errors, Black will handle formatting and long comments/strings are ok
    "G004",   # We prefer f-strings since we don't have slowdowns because of that
    "TRY003", # Too strict about messages
    "TRY301", # Doesn't work well with validators
]

unfixable = [
    "ERA", # Manual removal of those blocks to avoid false positives getting deleted
]

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["hash", "help", "id", "list", "type"]

[tool.ruff.per-file-ignores]
"**/tests/**.py" = ["S"]

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
